k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nossalista
  namespace: nossalista
spec:
  selector:
    app: nossalista
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
