k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nossalista
  namespace: nossalista
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: nossalista.leoferolive.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nossalista
                port:
                  number: 80
